--- a/src/main/resources/css/fxt-theme.css
+++ b/src/main/resources/css/fxt-theme.css
@@ -848,7 +848,7 @@
     -fx-background-color: #c1c1c1;
     -fx-background-insets: 2;
     -fx-background-radius: 6;
-    -fx-min-height: 30;
+    -fx-pref-height: 30;
 }
 
 .xml-editor-scroll-pane > .scroll-bar:vertical .thumb:hover {
